Current development version (0.6.2-SNAPSHOT)

- Added parsing of Mach-O compressed symbols tries (LC_DYLD_INFO command) to dyncall (issue #311)
- Fixed handling of classloaders in some use-cases (issue #283)
- Fixed Platform.open(File) (issue #306)
- Fixed Pointer.copyTo(dest, elementCount) (issue #317)
- Removed ios-package (binaries for iOS/arm) 

BridJ 0.6.1 (20120415, commit 6bc061dfce06b941086a29f696195e82fbaffbdc) 

- Release artifacts are available in Maven Central
- Fixed wchar_t and  WideCString on MacOS X (issue #295)
- Fixed @Name annotation
- Fixed deletion of temporary extracted library files with shutdown hook (issue #197)
- Fixed Unix binaries dependency on GLIBC 2.11 (lowered to version 2.2.5) (issue #195)
- Fixed some pointer methods : 3D pointers allocation, Pointer.setXXXsAtOffset, float endianness conversion
- Fixed regression on struct-valued struct fields (when implemented by java fields) (issue #200)
- Fixed crash with valued enum return values (issue #196)
- Fixed crash of dynamic callbacks on Win32
- Fixed attachment of native threads in native -> Java callbacks (should attach them as JVM daemon threads)
- Fixed C++ inner class name-mangling matching
- Fixed signature of ITaskbarList3.SetProgressValue (issue #218)
- Fixed Pointer.getByteBuffer() and Pointer.getBytes() (and all their type variants !)
- Fixed StructIO.getEnumField (now returns an IntValuedEnum<E>)
- Fixed handling of CLong / SizeT java fields in structs (cf. issue #253)
- Fixed StructIO.FieldDecl accessibility to allow override of all StructIO.Customizer methods (cf. issue #220)	
- Fixed regression on libc, created with null path (issue #217)
- Fixed back-references in Visual C++ demangler (issue #291)
- Fixed binding of IntValuedEnum<E> types
- Fixed handling of virtual destructors with GCC-compiled libraries (and virtual table pointer + runtime guess / check of virtual index for virtual methods) (issue #281)