@@ -2,6 +2,7 @@ Current development version (1.0-SNAPSHOT)
 
 - Fixed handling of image2d_t and image3d_t in Maven plugin (contrib. from Remi Emonet, request #308 and issue #307)
 - Fixed OpenGL interop on Windows (issue #312)
+- Optimized lots of native calls (CLKernel.setArgs/enqueueNDRange, CLBuffer.read/write...)
 
 Version 1.0.0-RC2 (20120415, commit 6bc061dfce06b941086a29f696195e82fbaffbdc)
 
