@@ -1,6 +1,7 @@
 Current development version (0.6.2-SNAPSHOT)
 
 - Added parsing of Mach-O compressed symbols tries (LC_DYLD_INFO command) to dyncall (issue #311)
+- Added Pointer.withoutValidityInformation() (yields faster, unsafe pointer)
 - Fixed handling of classloaders in some use-cases (issue #283)
 - Fixed Platform.open(File) (issue #306)
 - Fixed Pointer.copyTo(dest, elementCount) (issue #317)
